# rugram

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  README.ru.md  alembic.ini  config.py  docker-compose.yml  extensions.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  seed.py  start.sh  vitest.config.js  wsgi.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  refactor.yml  task.yml
.github/workflows/: deploy.yml
.mypy_cache/3.12/: cache.0.db-shm  cache.0.db-wal  cache.1.db  cache.1.db-shm  cache.1.db-wal  cache.10.db  cache.10.db-shm  cache.10.db-wal  cache.11.db-shm  cache.11.db-wal  cache.12.db-shm  cache.12.db-wal  cache.13.db-shm  cache.13.db-wal  cache.14.db  cache.14.db-shm  cache.14.db-wal  cache.15.db-shm  cache.15.db-wal  cache.2.db-shm  cache.2.db-wal  cache.3.db-shm  cache.3.db-wal  cache.4.db  cache.4.db-shm  cache.4.db-wal  cache.5.db  cache.5.db-shm  cache.5.db-wal  cache.6.db-shm  cache.6.db-wal  cache.7.db  cache.7.db-shm  (+5 more)
app/: __init__.py  cache.py  crypto.py  filters.py  forms.py  limiter.py  logger.py  models.py  presence.py  push.py  routes.py  translations.py
migrations/: env.py
scripts/: fix_missing_columns.py  gen_sitemap.py  gen_vapid_keys.py  migrate.py  sync-wiki.bat
tests/: _debug.js  _debug2.js  conftest.py  test_api.py  test_chat.py  test_integration.py  test_posts.py  test_routes.py  test_security.py  test_services.py  test_social.py  test_terminal.js  test_translations.py  test_widget_service.py
(+103 files in other folders)
