[project]
name = "rugram"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["migrations/"]
unsafe-fixes = false

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import ordering)
    "N",   # pep8-naming
    "UP",  # pyupgrade (modern Python idioms)
    "B",   # flake8-bugbear (common bugs)
    "SIM", # flake8-simplify (simplifiable expressions)
    "C4",  # flake8-comprehensions (dict/list comprehension best practices)
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line-too-long — handled by formatter
    "RUF001", # ambiguous-unicode-string — bilingual project uses Cyrillic legitimately
    "RUF002", # ambiguous-unicode-docstring — same
    "RUF003", # ambiguous-unicode-comment — same
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N806", "E402", "RUF012"]
"scripts/*" = ["E402"]
"config.py" = ["RUF012"]
"app/__init__.py" = ["N806"]
"app/repositories/chat_repository.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["migrations/"]

[tool.pytest.ini_options]
addopts = "-n auto --tb=short -q"
